# runtime-syspath

./: .gitignore  .gitprefix  .pylintrc  README.md  conftest.py  pyproject.toml  setup.py.not_used  test_add_srcdirs_to_syspath.py
example/: sysdirs_to_syspath_ex_main.py  syspath_sleuth_ex_main.py
example/runtime_syspath_ex/: __init__.py
examples/: sysdirs_to_syspath_ex_main.py  syspath_sleuth_ex_main.py
src/: __init__.py  add_srcdirs_to_syspath.py  syspath_sleuth_injector.py
src/runtime_syspath/: __init__.py  add_srcdirs_to_syspath.py  print_sorted_syspath.py  syspath_path_utils.py  syspath_utils.py
src/runtime_syspath/syspath_sleuth/: __init__.py  __main__.py  syspath_sleuth.py
src/syspath_sleuth/: __init__.py  __main__.py  syspath_sleuth.py
tests/: conftest.py  missing_syspath_sleuth_class.py  test___init__.py  test_add_srcdirs_to_syspath.py  test_print_sorted_syspath.py  test_syspath_utils.py
tests/syspath_sleuth/: test_syspath_sleuth.py
tests/syspath_sleuth_tests/: test___init__.py
tests/test_subproject/src/: test_subproject_module.py
tests/test_subproject/src/test_subproject/test_subproject_subproject/: test_subproject_subproject_package_mod.py
tests/test_subproject/src/test_subproject_package/: test_subproject_package_mod.py
tests/test_subproject/src/test_subproject_package/test_subproject_subproject/: test_subproject_subproject_package_mod.py
tests/test_syspath_sleuth/: test___init__.py  test_syspath_sleuth.py
